style.css
/*
Theme Name: MaserServis.cz
Description: Vlastní téma.
Version: 0.1
Author: Pavel Dostál
Author URI: http://pdostal.cz/
Tags:
*/

/* Begin Typography & Colors */

/* Positioning */

html { font-family: sans-serif, tahoma, verdana, arial; font-size: 13px; overflow: auto; }
body { width: 1024px; margin: 12px auto; padding: 5px; }

header { clear: both; margin-bottom: 5px; width: 160px; text-align: center; overflow: hidden; margin-bottom: 20px; }
header h1 { margin: 0px; }
header img { margin: 5px auto 0px auto; width: 150px; border: 0px solid #fff; }

aside { width: 150px; float: left; padding-left: 10px; margin-bottom: 25px; }
aside h1 { display: none; }
aside ul { padding-left: 5px; }
aside li { list-style: none; font-size: 1.30em; padding: 5px 0px; }

header a,aside a,footer a { color: #000; text-decoration: none; }

#main { width: 805px; max-height: 425px; float: right; margin-bottom: 25px; padding: 15px; }
#main img,#main iframe { opacity: 1; }
#main p { margin: 0px; }
#main .content>div { width: 50%; }

footer { width: 100%; position: absolute; bottom: 15px; clear: both; }
footer>span { display: block; margin: 0px auto; text-align: center; width: 500px; padding: 5px; }

/* Background */

html { background-color: #000; background-image: url('background.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-position: center; }

header,aside,#main,footer>span { background-color: rgba(255, 255, 255, 0.75); }

header,aside { border-top-right-radius: 10px; border-bottom-right-radius: 10px; }
#main { border-top-left-radius: 10px; border-bottom-left-radius: 10px; }
footer>span { border-radius: 5px; }

